feat: apple sign in works

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <!--
       If you are serving your web app in a path other than the root, change the
@@ -35,8 +35,12 @@
             content="547445170683-gr90urrmdr7qqsusm172qo6dkbsb4v5q.apps.googleusercontent.com"
     >
 
-
-    <title>heart</title>
+    <!--  Apple sign-in  -->
+    <script
+            type="text/javascript"
+            src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js">
+    </script>
+    <title>Heart of yours</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
